--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,69 @@
   font-size: 40px;
   padding: 50px;
 }
-  
+
+/* fade */
+
+.fade-appear {
+  opacity: 0.01;
+}
+
+.fade-appear-active {
+  opacity: 1;
+  transition: all 600ms;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0.01;
+  transition: all 500ms;
+}
+
+/* fade in bottom */
+.fade-in-bottom-appear {
+  opacity: 0.01;
+  transform: translate(0, -100%);
+}
+
+.fade-in-bottom-appear-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: all 500ms;
+}
+
+.fade-in-bottom-exit {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+
+.fade-in-bottom-exit-active {
+  opacity: 0.01;
+  transform: translate(0, -100%);
+  transition: all 500ms;
+}
+
+/* fade in top */
+.fade-in-top-appear {
+  opacity: 0.01;
+  transform: translate(0, 50px);
+}
+
+.fade-in-top-appear-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: all 500ms;
+}
+
+.fade-in-bottom-exit {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+
+.fade-in-top-exit-active {
+  opacity: 0.01;
+  transform: translate(0, 50px);
+  transition: all 500ms;
+}
